Adding user contact delete api and specification
