# APIDocument.json
@@ -122,7 +122,7 @@
         "deprecated": false
       }
     },
-    "/api/v1/contacts/{contactId}": {
+    "/api/v1/contacts/{userContactId}": {
       "get": {
         "tags": [
           "contact-controller"
@@ -162,9 +162,7 @@
           }
         },
         "deprecated": false
-      }
-    },
-    "/api/v1/contacts/{userContactId}": {
+      },
       "put": {
         "tags": [
           "contact-controller"
@@ -216,6 +214,46 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        },
+        "deprecated": false
+      },
+      "delete": {
+        "tags": [
+          "contact-controller"
+        ],
+        "summary": "To delete existing contact",
+        "operationId": "deleteContactUsingDELETE",
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "userContactId",
+            "in": "path",
+            "description": "User Contact id",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User contact deleted successfully",
+            "schema": {
+              "type": "object"
+            }
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "userContact not found"
+          },
+          "401": {
+            "description": "Unauthorised Access"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         },
         "deprecated": false
